# mute

./: .gitignore  CMakeLists.txt
cmake/dependencies/: entt.cmake  fftw.cmake  flecs.cmake  fmt.cmake  libremidi.cmake  math_approx.cmake  miniaudio.cmake  raylib.cmake
ext/local/fftw-3.3.10/: CMakeLists.txt
src/: app.h  constants.h  glute.h  main.cc  patches.h  ui.cc  ui.h
src/.mute/: fft.h  random.h  time.cc  time.h  transport.h
src/.mute/modules/: edgedetector.h  noise.h  oscillator.cc  oscillator.h  sequencer.h
src/mute/: buffer.h  debug.cc  debug.h  driver.cc  driver.h  dsp.h  enveloppe.h  fft.h  mapping.h  math.h  miniaudio.impl.cc  random.cc  util.h
src/mute/dsp/: core.h  enveloppe.h  filter.h  sequencer.h
src/mute/modules/: adsr.h  biquad.h  enveloppe.h  noise.h  oscillator.cc  oscillator.h  perc.h  sequencer.h  voice.h
src/patch/: modal_drummer.h  mute_001.h
